# afu-brain

./: .env.example  .gitignore  LAUNCH.md  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_AND_PRIVACY.md  EVIDENCE.md  FILE_VAULT_RETRIEVAL.md  MASL.md  OBSERVATORY_FEED.md  OPENCLAW.md  PROMOTION_KIT.md  RAG_PACKS.md  RAG_UPGRADES.md  RELEASE_STRATEGY.md  ROLLING_COGNITION_AUDIT.md  SYNAPSE_ENGINE.md  VOICE_FIRST_AFU_MODEL.md
examples/: brain_decision.sample.json  contract_request.decision.json  contract_request.input.json  observatory_feed.sample.json  rag_pack.sample.json  rolling_cognition_audit.summary.json
policies/: masl_policy.json
preview/: github-readme-preview.html
rag-packs/: battlenix-reasoning-seeds-v0.1.jsonl  evidence-patterns-v0.1.jsonl  manifest.json  masl-safety-v0.1.jsonl  memory-parameter-examples-v0.1.jsonl  openclaw-decision-cases-v0.1.jsonl  rolling-cognition-audit-v0.1.jsonl  social-cognition-v0.1.jsonl  tool-calling-retrieval-v0.1.jsonl
schemas/: brain_decision.schema.json  decision_contract.schema.json  observatory_feed.schema.json  owner_memory.schema.json  rag_pack.schema.json
scripts/: export_public_rag_from_sqlite.py  scan_secrets.sh  validate_rag_packs.py
skills/afu-brain/: SKILL.md
