[project]
name = "afu-brain"
version = "0.1.0"
description = "A model-agnostic butler brain that turns private human memory into safe agent decisions before tools execute."
requires-python = ">=3.10"
authors = [{ name = "Norika Oda" }]
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://charenix.com"
Observatory = "https://charenix.com/lobster/dashboard/?lang=en"

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

