[project]
name = "afu-brain"
version = "0.1.0"
description = "An OpenClaw-compatible, model-agnostic butler brain that turns private human memory into safe agent decisions before tools execute."
requires-python = ">=3.10"
authors = [{ name = "Norika Oda" }]
license = { text = "Apache-2.0" }
keywords = ["openclaw", "ai-agents", "agent-safety", "masl", "local-first", "personal-ai"]

[project.scripts]
afu-brain-rag = "afu_brain.rag_cli:main"
afu-brain-evolution-demo = "afu_brain.evolution_demo:main"
afu-brain-file-vault-demo = "afu_brain.file_vault_demo:main"

[project.urls]
Homepage = "https://charenix.com"
Observatory = "https://charenix.com/lobster/dashboard/?lang=en"

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]
